--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,18 @@
   </head>
   <body>
 
-    <h1>Crunch, Chrunch Captian</h1>
+    <h1 class="center-align center-align">Crunch Creepy</h1>
 
-     <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>button</a>
+    <div class="container center-align">
+       <div class="row">
+      <a class="click-me center-align waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>button</a>
+    </div>
+  </div>
+
+
+    <section class="stuff-here center-align">
+
+    </section>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
    <script type="text/javascript" src="index.js"></script>
